tar (1.25-1) unstable; urgency=low

  * new upstream version, closes: #602184, #602209, #602413
  * Add Vcs-Git, Vcs-Browser fields to debian/control using patch from
    Simon McVittie's 1.24-1.1 NMU, closes: #602639, #602709

 -- Bdale Garbee <bdale@gag.com>  Wed, 10 Nov 2010 15:45:09 -0700

tar (1.24-1) unstable; urgency=low

  * new upstream version

 -- Bdale Garbee <bdale@gag.com>  Mon, 01 Nov 2010 17:26:56 -0600

tar (1.23-4) unstable; urgency=low

  * revert patch to src/create.c introduced in 2004 to fix a dpkg bug long
    since resolved, closes: #598345

 -- Bdale Garbee <bdale@gag.com>  Wed, 29 Sep 2010 06:01:21 +0900

tar (1.23-3) unstable; urgency=medium

  * add xz-utils back to the Suggests list since it may not be 'required'
    forever
  * current debhelper includes trigger support, closes: #561598
  * patch from upstream to fix ability of rmt to accept mixed file mode
    representations, closes: #587702, #597672

 -- Bdale Garbee <bdale@gag.com>  Wed, 22 Sep 2010 00:33:16 -0600

tar (1.23-2.1) unstable; urgency=low

  * Non-maintainer upload.
  * src/extract.c: Apply upstream git commit b60e56fd which fixes a dead loop
    on extracting existing symlinks with the -k option, closes: #577978,
    #576876.

 -- Michael Banck <mbanck@debian.org>  Sun, 18 Jul 2010 17:14:48 +0200

tar (1.23-2) unstable; urgency=low

  * use xz when lzma is called for, and stop suggesting both lzma since it's
    no longer used, and xz-utils since it's now priority required,
    closes: #582706, #523494

 -- Bdale Garbee <bdale@gag.com>  Mon, 14 Jun 2010 11:05:57 -0600

tar (1.23-1) unstable; urgency=low

  * new upstream version, fixes security issue in rmt (CVE-2010-0624)
  * add suggests for lzma and xz-utils, closes: #523499

 -- Bdale Garbee <bdale@gag.com>  Wed, 10 Mar 2010 09:51:37 -0700

tar (1.22-2) unstable; urgency=low

  * Add Carl Worth as an uploader.
  * Fix to allow parallel build (-j2), closes: #535319