@@ -14,6 +14,7 @@ Pre-Depends: ${shlibs:Depends}, ${misc:Depends}
 Essential: yes
 Conflicts: cpio (<= 2.4.2-38)
 Replaces: cpio (<< 2.4.2-39)
+Breaks: dpkg-dev (<< 1.14.26)
 Suggests: bzip2, ncompress, xz-utils
 Description: GNU version of the tar archiving utility
  Tar is a program for packaging a set of files as a single archive in tar
