@@ -1,8 +1,10 @@
 tar (1.25-1) unstable; urgency=low
 
-  * new upstream version, closes: #602184, #602209, #602413
+  * new upstream version, closes: #602184, #602209, #602413, #575298
   * Add Vcs-Git, Vcs-Browser fields to debian/control using patch from
     Simon McVittie's 1.24-1.1 NMU, closes: #602639, #602709
+  * stop patching src/list.c since it now does more harm than good,
+    and add a Breaks against old dpkg versions, closes: #522858
 
  -- Bdale Garbee <bdale@gag.com>  Wed, 10 Nov 2010 15:45:09 -0700
 
